js/src/tests/test262/built-ins/Error/prototype/stack/getter-error-prototype.js


























var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

var prototypes = [];
for (var i = 0; i < allErrorConstructors.length; ++i) {
  var Ctor = allErrorConstructors[i];
  prototypes.push([Ctor.name + '.prototype', Ctor.prototype]);
}

for (var i = 0; i < prototypes.length; ++i) {
  var label = prototypes[i][0];
  var proto = prototypes[i][1];
  assert.sameValue(get.call(proto), undefined, label);
}


assert.sameValue(Error.prototype.stack, undefined, 'Error.prototype.stack property access');

reportCompare(0, 0);
